# badgecpp

./: .ai-commit-prompt  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
.snippets/: header.hpp
assets/: resources.json
assets/badgecpp/: .gitignore
inc/badgecpp/: assets.hpp  b64.hpp  badge.hpp  badgecpp.hpp  bbox.hpp  color.hpp  font.hpp  icons.hpp  render.hpp  render.impl.hpp  util.hpp  version.hpp  xml.hpp
inc/badgecpp/render/: flat.hpp  render.hpp
python/: .gitignore  CMakeLists.txt  README.md  setup.py  wheel.sh
python/pybadge/: __init__.py  pybadge.pyi
python/src/: python.cpp
src/: assets.cpp  b64.cpp  badge.cpp  badgecpp.cpp  color.cpp  font.cpp  icons.cpp  render.cpp  util.cpp  version.cpp  xml.cpp
src/fonts/: helvetica-11px-bold.cpp  verdana-10px-bold.cpp  verdana-10px-normal.cpp  verdana-11px-normal.cpp
src/renders/: flat.cpp
tools/: file_header.py  font_maker.py  icons_tar.py  resource-builder.py
